# tej4m_computer_interfacing_lab

./: .gitmodules  Cargo.toml  README.md  computer_interfacing_lab.code-workspace  protocol.md  rust-toolchain  tej4m_computer_interfacing_lab.code-workspace
arduino/: platformio.ini
arduino/include/serial/: protocol.hh
arduino/src/: main.cc
arduino/src/serial/: protocol.cc
cad/layout/: layout-cache.lib  layout.sch  layout.sch-bak
common/: Cargo.toml
common/src/: lib.rs
common/src/protocol/: mod.rs
coprocessor/: Cargo.toml  platformio.ini
coprocessor/.cargo/: config.toml
coprocessor/include/: interface.hh  protocol.hh
coprocessor/src/: interface.cc  main.cc  main.rs
coprocessor/src/hardware/: mod.rs  seven_seg.rs
desktop/: .project  Cargo.toml  settings.gradle
desktop/app/: .project  build.gradle
desktop/app/src/main/java/ca/retrylife/tej4m/labs/interfacing/: App.java
desktop/app/src/main/java/ca/retrylife/tej4m/labs/interfacing/util/: USBDiscovery.java
desktop/app/src/test/java/ca/retrylife/tej4m/labs/interfacing/: AppTest.java
desktop/src/: main.rs
docs/: protocol.md
host/: Cargo.toml  pyproject.toml
host/host/: __main__.py
host/src/: main.rs
scripts/: build-coprocessor.sh  build-desktop.sh  deploy.sh  run-desktop.sh
