[tool.poetry]
name = "host"
version = "0.1.0"
description = ""
authors = ["Evan Pratten <ewpratten@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"
raylib-py = "^0.1.1"
rich = "^9.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
